--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Astrophysics Senimar
+author:           2019 astropku
+#email:            sighingnow@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
+url:              'https://xsmmm.github.io'
 baseurl:          '/jekyll-gitbook'
 rss:              RSS
 
@@ -37,5 +36,3 @@ destination:      ./_site
 incremental:      false
 regenerate:       true
 
-plugins:
-  - jemoji
